# NanoEdge

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
downloaded_docs/binance-derivatives/: Introduction.md  change-log.md  quick-start.md
downloaded_docs/binance-spot-api/: docs.md
downloaded_docs/boost-beast/: beast_hidden.md
downloaded_docs/fyers/: API - FYERS.md
downloaded_docs/lightweight-charts/: docs.md  tutorials.md
downloaded_docs/questdb/: cookbook.md  schema-design-essentials.md
downloaded_docs/questdb-python-client/: api.md  changelog.md  community.md  conf.md  examples.md  genindex.md  index.md  installation.md  search.md  sender.md  troubleshooting.md
downloaded_docs/zeromq/: get-started.md  messages.md  socket-api.md
frontend/: .npmrc  chart.js.backup  components.json  index.html  index.html.backup  orderbook.js.backup  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  index.css  index.tsx
hft/: __init__.py  config.py
hft/api/: __init__.py  dependencies.py  history.py  main.py  metrics.py  symbols.py  websocket.py
hft/connectors/: __init__.py
hft/core/: __init__.py  aggregator.py  exceptions.py  metrics.py  ring_buffer.py  (+2 more)
nanoedge/: __init__.py  config.py
plans/: New Plan 1.md  New Plan 2.md  New Plan 3.md  master_plan.md
scripts/: fyers_auth.py  latency_report.py  profile_server.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_core_types.py  test_fyers_tbt.py  test_gap_fill.py  test_ring_buffer.py
(+3907 files in other folders)
