[project]
name = "nanoedge"
version = "0.1.0"
description = "NanoEdge - High-Frequency Trading Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "numpy>=2.0",
    "structlog>=24.0",
    "msgspec>=0.18",
    "pydantic-settings>=2.0",

    # Async/Networking
    "websockets>=12.0",
    "httpx>=0.27",

    # API Server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Database
    "questdb>=2.0",

    # Data structures
    "sortedcontainers>=2.4",

    # Fyers API
    "fyers-apiv3>=3.0",

    # Protobuf (for Fyers TBT 50-depth)
    "protobuf>=5.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
